RESOLVED FIXED110563
[BlackBerry] GeolocationClientBlackBerry: add missing headers
https://bugs.webkit.org/show_bug.cgi?id=110563
Summary [BlackBerry] GeolocationClientBlackBerry: add missing headers
Alberto Garcia
Reported 2013-02-22 00:23:10 PST
Frame.h and SecurityOrigin.h were required in r136969, GeolocationPosition.h in r132360.
Attachments
Patch (1.43 KB, patch)
2013-02-22 00:24 PST, Alberto Garcia
no flags
Alberto Garcia
Comment 1 2013-02-22 00:24:59 PST
WebKit Review Bot
Comment 2 2013-02-22 02:11:28 PST
Comment on attachment 189705 [details] Patch Rejecting attachment 189705 [details] from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '--bot-id=gce-cq-03', 'land-attachment', '--force-clean', '--non-interactive', '--parent-command=commit-queue', 189705, '--port=chromium-xvfb']" exit_code: 2 cwd: /mnt/git/webkit-commit-queue Last 500 characters of output: fatal: read error: Connection reset by peer Died at Tools/Scripts/update-webkit line 151. Failed to run "['Tools/Scripts/update-webkit', '--chromium', '--force-update']" exit_code: 2 Updating OpenSource fatal: read error: Connection reset by peer Died at Tools/Scripts/update-webkit line 151. Failed to run "['Tools/Scripts/update-webkit', '--chromium', '--force-update']" exit_code: 2 Updating OpenSource fatal: read error: Connection reset by peer Died at Tools/Scripts/update-webkit line 151. Full output: http://queues.webkit.org/results/16701634
WebKit Review Bot
Comment 3 2013-02-24 23:37:07 PST
Comment on attachment 189705 [details] Patch Clearing flags on attachment: 189705 Committed r143887: <http://trac.webkit.org/changeset/143887>
WebKit Review Bot
Comment 4 2013-02-24 23:37:11 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.